Removed comment clutter